[package]
name = "chip8"
version = "0.1.0"
authors = ["Andrew Christiansen <andrewtaylorchristiansen@gmail.com>"]
description = "no_std chip8 interpreter"
keywords = ["chip8", "interpreter", "no_std"]
categories = ["no-std", "interpreters"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2"
embedded-graphics = "0.7.1"
