[package]
name = "chip8"
version = "0.1.0"
authors = ["Andrew Christiansen <andrewtaylorchristiansen@gmail.com>"]
description = "no_std chip8 interpreter"
keywords = ["chip8", "interpreter", "no_std"]
categories = ["no-std", "interpreters"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = { version = "0.2", features=["unproven"] }
embedded-graphics = "0.7.1"
rand = { version = "0.8.4", default-features = false }

[dev-dependencies]
embedded-hal-mock = "0.8"
